--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".FrameActivity" />
+        <activity android:name=".RelativeActivity" />
+        <activity android:name=".LinearActivity" />
+        <activity android:name=".TableActivity"></activity>
     </application>
 
 </manifest>
